@@ -38,8 +38,6 @@
 
 (defvar tramp-minor-mode-map (make-sparse-keymap)
   "Keymap for Tramp minor mode.")
-(define-key tramp-minor-mode-map [remap compile] 'tramp-compile)
-(define-key tramp-minor-mode-map [remap recompile] 'tramp-recompile)
 
 (define-minor-mode tramp-minor-mode "Tramp minor mode for utility functions."
   :group 'tramp
@@ -51,6 +49,38 @@
 	(and tramp-minor-mode (tramp-tramp-file-p default-directory))))
 
 (add-hook 'find-file-hooks 'tramp-minor-mode t)
+(add-hook 'dired-mode-hook 'tramp-minor-mode t)
+
+(defun tramp-remap-command (old-command new-command)
+  "Replaces bindings of OLD-COMMAND by NEW-COMMAND.
+If remapping functionality for keymaps is defined, this happens for all
+bindings.  Otherwise, only bindings active during invocation are taken
+into account.  XEmacs menubar bindings are not changed by this."
+  (if (functionp 'command-remapping)
+      ;; Emacs 21.4
+      (eval
+       `(define-key tramp-minor-mode-map [remap ,old-command] new-command))
+    ;; previous Emacs 21 versions.
+    (mapcar
+     '(lambda (x)
+	(define-key tramp-minor-mode-map x new-command))
+     (where-is-internal old-command))))
+
+(tramp-remap-command 'compile 'tramp-compile)
+(tramp-remap-command 'recompile 'tramp-recompile)
+
+;; XEmacs has an own mimic for menu entries
+(when (fboundp 'add-menu-button)
+  (funcall 'add-menu-button
+   '("Tools" "Compile")
+   ["Compile..."
+    (command-execute (if tramp-minor-mode 'tramp-compile 'compile))
+    :active (fboundp 'compile)])
+  (funcall 'add-menu-button
+   '("Tools" "Compile")
+   ["Repeat Compilation"
+    (command-execute (if tramp-minor-mode 'tramp-recompile 'recompile))
+    :active (fboundp 'compile)]))
 
 ;; Utility functions.
 
@@ -63,6 +93,8 @@
                                    '(compile-history . 1)))
      (list compile-command)))
   (setq compile-command command)
+  (unless (string-match "[ \t]*&[ \t]*\\'" command)
+    (setq command (concat command "&")))
   (save-some-buffers (not compilation-ask-about-save) nil)
   (let ((d default-directory))
     (save-excursion
@@ -71,17 +103,22 @@
       (setq default-directory d)))
   (tramp-handle-shell-command command (get-buffer "*Compilation*"))
   (pop-to-buffer (get-buffer "*Compilation*"))
-  (tramp-minor-mode 1)
-  (compilation-minor-mode 1))
+  (compilation-mode)
+  (compilation-minor-mode 1)
+  (tramp-minor-mode 1))
 
 (defun tramp-recompile ()
   "Re-compile on remote host."
   (interactive)
-  (save-some-buffers (not compilation-ask-about-save) nil)
-  (tramp-handle-shell-command compile-command (get-buffer "*Compilation*"))
-  (pop-to-buffer (get-buffer "*Compilation*"))
-  (tramp-minor-mode 1)
-  (compilation-minor-mode 1))
+  (let ((command compile-command))
+    (unless (string-match "[ \t]*&[ \t]*\\'" command)
+      (setq command (concat command "&")))
+    (save-some-buffers (not compilation-ask-about-save) nil)
+    (tramp-handle-shell-command command (get-buffer "*Compilation*"))
+    (pop-to-buffer (get-buffer "*Compilation*"))
+    (compilation-mode)
+    (compilation-minor-mode 1)
+    (tramp-minor-mode 1)))
 
 (provide 'tramp-util)
 
