@@ -1,3 +1,12 @@
+2005-01-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-util.el (tramp-remap-command): New defun.
+	(top): Remove `define-key' calls.  They are replaced by respective
+	`tramp-remap-command' and `add-menu-button' calls.  Add
+	`tramp-minor-mode' to `dired-mode-hook'.
+	(tramp-compile, tramp-recompile): Call the commands
+	asynchronously.  Add `compilation-mode' to *Compilation* buffer.
+
 2005-01-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el: Fix copyright years.
